--- a/.travis.yml
+++ b/.travis.yml
@@ -46,7 +46,7 @@ jobs:
       before_script:
         - sudo apt-get update -qq
         - sudo apt-get install -qq -y software-properties-common
-        #- sudo add-apt-repository -y ppa:projectatomic/ppa
+        - sudo add-apt-repository -y ppa:projectatomic/ppa
         - sudo apt-get update -qq
         - sudo apt-get -qq -y install buildah
         - id
